# isa-mcp-server

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  main.py  package-lock.json  package.json  pyproject.toml  run-inspector.sh  test.db  test_import.py
.claude/: post_edit_hook.sh  settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
scripts/: import_isa_data.py  populate_architecture_metadata.py
src/isa_mcp_server/: __init__.py  arm_metadata_parser.py  isa_database.py  server.py  validation.py  xed_metadata_parser.py
src/isa_mcp_server/importers/: __init__.py  arm_importer.py  arm_instruction_parser.py  base.py  riscv_importer.py  xed_importer.py  xed_parser.py
tests/: __init__.py  conftest.py  test_server_validation.py  test_validation.py
tests/integration/: __init__.py  test_cross_isa_imports.py  test_import_arm_data.py
tests/unit/: __init__.py  test_architectures_resource.py  test_arm_importer.py  test_arm_instruction_parser.py  test_arm_metadata_parser.py  test_arm_parser_errors.py  test_instruction_groups_resource.py  test_registers_resource.py  test_xed_metadata_parser_errors.py
