[project]
name = "isa-mcp-server"
version = "0.1.0"
description = "MCP server providing documentation for Instruction Set Architectures"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp",
    "pydantic",
    "ruff>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src/isa_mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
